# scripts

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SCRIPTS
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html
docs/man/: README.md  SCRIPTS.5.scd  SCRIPTS_WORKSPACE.toml.5.scd  scripts.1.scd
example/a/: SCRIPTS
example/b/: SCRIPTS
src/: main.rs
src/commands/: clean.rs  env.rs  mod.rs  print_tree.rs  run.rs  run_executor.rs  run_plan.rs  wait.rs
src/helpers/: cache.rs  git.rs  graph.rs  mod.rs  path.rs  readiness.rs  resolve.rs  scripts_def.rs  task_list.rs  wait.rs
tests/: cli.rs
