[package]
name = "scripts-monorepo"
version = "0.1.0"
edition = "2021"
description = "Pragmatic monorepo task runner with dependency graphs and content-aware caching."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mbullington/scripts"
homepage = "https://mbullington.github.io/scripts/"
documentation = "https://mbullington.github.io/scripts/"
keywords = ["monorepo", "task-runner", "cli", "build", "cache"]
categories = ["command-line-utilities", "development-tools::build-utils"]
default-run = "scripts"
exclude = [".github/**", "RFC.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "scripts"
path = "src/main.rs"

[dependencies]
# Used to parse command line arguments.
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.58"
termtree = "0.4.1"

# Used to parse SCRIPTS files.
toml = "0.8.13"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

# Rust utils
anyhow = "1.0.86"
thiserror = "1.0.61"

# Misc
dagrs = "0.2.0"
ignore = "0.4.23"
hex = "0.4"
colored = "2"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.13.0"
